--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
           volumes:
              - ./php/online-shopping-system/database/onlineshop.sql:/docker-entrypoint-initdb.d/onlineshop.sql
           environment:
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_PASSWORD: admin
             MYSQL_DATABASE: database
-            MYSQL_USER: edureka
+            MYSQL_USER: admin
             MYSQL_PASSWORD: admin
           ports:
            - 6033:3306
@@ -33,9 +33,11 @@ services:
         ports:
             - 8000:80
         environment:
-            MYSQL_USER: edureka
+            MYSQL_USER: admin
             MYSQL_PASSWORD: admin
-            MYSQL_ROOT_PASSWORD: root 
+            MYSQL_ROOT_PASSWORD: admin 
 volumes:
     persistent:
-
+# becarefull from hidden containers processus 
+# do a docker ps -a to check exited container and delete  them f they exist
+# mysql usually take a few time to load 
